--- a/css/styles.css
+++ b/css/styles.css
@@ -11,17 +11,24 @@ body {
   background-style:flat;
 }
 
-.name {
+.tree {
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+  max-width: 800px;
+}
+
+.tree .name {
   text-transform: uppercase;
   font-weight: 600;
   margin: 2em;
 }
 
-.links a {
+.tree .links a {
   margin: 0.75em auto;
 }
 
-.footer {
+.tree .footer {
   margin: 2rem;
 }
 
